admission/ValidatingAdmissionPolicy/policies/livenessprobe-tcpsocket-host/containers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: livenessprobe-tcpsocket-host-containers
  annotations:
    kubeapt.io/uuid: "407ba943-2a0f-471c-8bf7-5088e408d4d7"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
    livenessProbe:
      tcpSocket:
        port: 80
        host: 127.0.0.1
